--- a/frontend/src/components/template/Login.css
+++ b/frontend/src/components/template/Login.css
@@ -6,13 +6,11 @@
       
     min-height: 100vh;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     padding: 250px;
     font-weight: 400;
     font-family: sans-serif;
-    background: #12c2e9;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #12c2e9, #c471ed, #12c2e9);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #12c2e9, #c471ed, #12c2e9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #c5c6c7;
     
   }
   
@@ -28,7 +26,7 @@
   
   .outer {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: column;
     text-align: left;
   }
@@ -58,16 +56,5 @@
   .custom-control-label {
     font-weight: 400;
   }
+
   
-  .forgot-password,
-  .forgot-password a {
-    text-align: right;
-    font-size: 13px;
-    padding-top: 10px;
-    color: #7f7d7d;
-    margin: 0;
-  }
-  
-  .forgot-password a {
-    color: #167bff;
-  }
